<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/l1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btTextSpotifyStreamer"
        android:id="@+id/button"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#fff08c35"
        android:onClick="sendMessageSpotifyStreamer" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btTextSuperDuo"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#fff08c35"
        android:onClick="sendMessageSuperDuo" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btTextBuildItBigger"
        android:id="@+id/button3"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="#fff08c35"
        android:onClick="sendMessageBuildItBigger" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btTextXYZReader"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#fff08c35"
        android:onClick="sendMessageXYZReader" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btTextCapstone"
        android:id="@+id/button6"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="#fff04367"
        android:layout_below="@+id/button4"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="sendMessageCapstone" />

</RelativeLayout>
